force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/clofor_com_cfs__MasterAnkenMeisai__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_MBLBUYINGOnlineHelp</customHelpPage>
    <description>M B/L - BUYING</description>
    <label>混載-請求・仕入</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>M B/L BUYING ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>