force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__AmountBuyingIncludingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingIncludingTaxUSD__c</fullName>
    <formula>ROUND(clofor_com_cfs__BuyAmountUSD__c,3) + ROUND(clofor_com_cfs__AmountofTaxBuyingUSD__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Including Tax(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>