force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__BillNameAtPrintENG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillNameAtPrintENG__c</fullName>
    <label>Bill Name at Print(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>