force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__BuyInTaxAmountJPY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyInTaxAmountJPY__c</fullName>
    <description>IF (MTariff__r.wkTaxFlag__c,
BuyAmountJPN__c * (1 + BuyTaxInitial__c),
BuyAmountJPN__c
)</description>
    <formula>clofor_com_cfs__BuyTaxNum__c + ROUND(clofor_com_cfs__BuyAmountJPN__c ,0)</formula>
    <label>AMOUNT BUYING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>