force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__BuyTankaUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyTankaUSD__c</fullName>
    <label>UNIT PRICE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>