force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__BuyTaxShow__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyTaxShow__c</fullName>
    <formula>clofor_com_cfs__BuyTaxInitial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSUMPTION TAX FOR CALCULATION-BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>