force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__Container_Type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Charge_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerType</valueSetName>
    </valueSet>
</CustomField>