force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__Cost_Allocation_Catetory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cost_Allocation_Catetory__c</fullName>
    <inlineHelpText>Choose the category of the buying item of the MB/L(from partner, carrier, carrier(TAX), warehouse). In corresponding allocation HB/L buying, also input this category.</inlineHelpText>
    <label>COST ALLOCATION CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Cost allocation</fullName>
            </value>
            <value>
                <fullName>Carrier Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Warehouse Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Carrier Cost Allocation(TAX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>