force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__CreateFMSBill1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreateFMSBill1__c</fullName>
    <label>Create FMS Bill-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>