force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__curr__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__curr__c</fullName>
    <label>CURR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>VND</fullName>
            </value>
            <value>
                <fullName>KHR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>