force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__CurrencyConversionForBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrencyConversionForBuying__c</fullName>
    <label>Currency Conversion for Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>