force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__KawaseBay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KawaseBay__c</fullName>
    <label>EXCHANGE RATE(BUYING)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>