force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__MasterAnken__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MasterAnken__c</fullName>
    <label>MASTER SHIPMENT NAME</label>
    <referenceTo>clofor_com_cfs__MasterAnken__c</referenceTo>
    <relationshipName>MasterAnken</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>