force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__ProductTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductTax__c</fullName>
    <formula>TEXT( clofor_com_cfs__MTariff__r.clofor_com_cfs__Zeibunrui__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check V if the service is a Tax Item.</inlineHelpText>
    <label>TAX CATEGORY</label>
    <type>Text</type>
</CustomField>