force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__RiekirituMisei__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RiekirituMisei__c</fullName>
    <formula>IF (clofor_com_cfs__SellAmountJPN__c  = null || clofor_com_cfs__SellAmountJPN__c  = 0, 0, ( clofor_com_cfs__SellAmountJPN__c  -  clofor_com_cfs__BuyAmountJPN__c ) / clofor_com_cfs__SellAmountJPN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>