force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__SeikyuBangou__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SeikyuBangou__c</fullName>
    <label>No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>