force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__Seikyusaki__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Seikyusaki__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INVOICE TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MasterSeikyusakis</relationshipName>
    <type>Lookup</type>
</CustomField>