force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__SeikyusakiTantosya__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SeikyusakiTantosya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF INVOICE TO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MasterSeikyusakiTantosyas</relationshipName>
    <type>Lookup</type>
</CustomField>