force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__SellAmountJPN__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellAmountJPN__c</fullName>
    <formula>clofor_com_cfs__Suryo__c *  clofor_com_cfs__SellTankaJPY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>