force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__SellTankaJPY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellTankaJPY__c</fullName>
    <label>UNIT PRICE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>