force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__SellTaxNum__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellTaxNum__c</fullName>
    <formula>IF (clofor_com_cfs__MTariff__r.clofor_com_cfs__wkTaxFlag__c,
clofor_com_cfs__SellAmountJPN__c *  clofor_com_cfs__TaxInitial__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>