force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__Shiiresaki__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Shiiresaki__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ clofor_com_cfs__MTariff__r.clofor_com_cfs__Supplier__r.Id  , clofor_com_cfs__MTariff__r.clofor_com_cfs__Supplier__r.Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SERVICE PROVIDER VENDOR</label>
    <type>Text</type>
</CustomField>