force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__TaxShow__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TaxShow__c</fullName>
    <formula>clofor_com_cfs__TaxInitial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please report to System Administrator if you need to changes the consumption ratio.</inlineHelpText>
    <label>CONSUMPTION TAX FOR CALCULATION-SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>