force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__TorihikisakiLink__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TorihikisakiLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+  clofor_com_cfs__MasterAnken__r.clofor_com_cfs__Field1__r.Id  , clofor_com_cfs__MasterAnken__r.clofor_com_cfs__Field1__r.Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMER</label>
    <type>Text</type>
</CustomField>