force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/fields/clofor_com_cfs__TotalAmountofBuyingLocalInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofBuyingLocalInput__c</fullName>
    <label>Total Amount of Buying(Local)-Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>