force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__MasterAnken__c</columns>
    <columns>clofor_com_cfs__Shiiresaki__c</columns>
    <columns>clofor_com_cfs__KawaseBay__c</columns>
    <columns>clofor_com_cfs__BuyTankaJPY__c</columns>
    <columns>clofor_com_cfs__BuyTankaUSD__c</columns>
    <columns>clofor_com_cfs__Suryo__c</columns>
    <columns>clofor_com_cfs__BuyAmountJPN__c</columns>
    <columns>clofor_com_cfs__BuyAmountUSD__c</columns>
    <columns>clofor_com_cfs__BuyTaxInitial__c</columns>
    <columns>clofor_com_cfs__BuyTaxShow__c</columns>
    <columns>clofor_com_cfs__ProductTax__c</columns>
    <columns>clofor_com_cfs__BuyTaxNum__c</columns>
    <columns>clofor_com_cfs__BuyInTaxAmountJPY__c</columns>
    <columns>clofor_com_cfs__MTariff__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>