force-app/main/default/objects/clofor_com_cfs__MasterAnkenMeisai__c/listViews/clofor_com_cfs__ConsolSelling.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__ConsolSelling</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__SellTaxNum__c</columns>
    <columns>clofor_com_cfs__MasterAnken__c</columns>
    <columns>clofor_com_cfs__MTariff__c</columns>
    <columns>clofor_com_cfs__PaymentTo__c</columns>
    <columns>clofor_com_cfs__Seikyusaki__c</columns>
    <columns>clofor_com_cfs__Suryo__c</columns>
    <columns>clofor_com_cfs__SellTankaUSD__c</columns>
    <columns>clofor_com_cfs__TaxInitial__c</columns>
    <columns>clofor_com_cfs__SellAmountUSD__c</columns>
    <columns>clofor_com_cfs__BuyAmountUSD__c</columns>
    <columns>clofor_com_cfs__BuyAmountJPN__c</columns>
    <filterScope>Mine</filterScope>
    <label>Consol Selling</label>
</ListView>